--- a/Frontend/css/custom.css
+++ b/Frontend/css/custom.css
@@ -89,3 +89,18 @@
     .demo:hover {
         opacity: 1;
     }
+
+
+
+canvas {
+    margin: 10px;
+    padding: 0;
+    
+    display: inline-block;
+}
+.wrapper {
+    display: block;
+    margin: 0 auto;
+    padding: 0;
+    width: 400px;
+}
